Add support for the dailyRotateFile transport and improve pagination
With newer versions of Winston only 10 rows were returned using queries
without any options. Now up to 10k lines are read and processed.

The pagination has been improved too, and now highlights which page is
being shown.

--- a/views/logs.jade
+++ b/views/logs.jade
@@ -46,5 +46,5 @@ html(lang="en")
                 nav
                     ul.pagination
                         each page in pages
-                            li
+                            li(class=page == currentPage ? "active" : "")
                                 a(href='/logs/' + page)= page
